// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationList does not render the list if total 0 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={false}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={null}
  >
    <EmptyOrChildren
      data={
        Immutable.List [
          Immutable.Map {
            "control_number": 170,
          },
        ]
      }
      description="0 Citations"
    />
  </ErrorAlertOrChildren>
</ContentBox>
`;

exports[`CitationList renders with citations 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={false}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={null}
  >
    <EmptyOrChildren
      data={
        Immutable.List [
          Immutable.Map {
            "control_number": 170,
          },
          Immutable.Map {
            "control_number": 171,
          },
        ]
      }
      description="0 Citations"
    >
      <ListWithPagination
        loading={false}
        onPageChange={[Function]}
        page={1}
        pageItems={
          Immutable.List [
            Immutable.Map {
              "control_number": 170,
            },
            Immutable.Map {
              "control_number": 171,
            },
          ]
        }
        pageSize={25}
        renderItem={[Function]}
        title={null}
        total={1}
      />
    </EmptyOrChildren>
  </ErrorAlertOrChildren>
</ContentBox>
`;

exports[`CitationList renders with error 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={false}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={
      Immutable.Map {
        "message": "error",
      }
    }
  >
    <EmptyOrChildren
      data={Immutable.List []}
      description="0 Citations"
    />
  </ErrorAlertOrChildren>
</ContentBox>
`;
